DSL 적용 H2 -> mariadb 적용 테이블 생성 Init 변경 메뉴 전체 호출 API 추가